deployments/api-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: pois
  name: api-poi-node-port-service
spec:
  ports:
      # service port in cluster
    - port: 3000
      # port to contact inside container
      targetPort: 3000
  selector:
    type: NodePort
    app: api-poi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-poi-deployment
  namespace:  pois
  labels:
    app: api-poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-poi
  template:
    metadata:
      annotations:
        linkerd.io/inject: disabled
      labels:
        app: api-poi
    spec:
      containers:
        - image: <DOCKER_ID>/mongoApi
          imagePullPolicy: Always
          name: api-poi
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
