deployments/books-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: books-service
spec:
  selector:
    app: books
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
      # targetPort: 3000
  #     nodePort: 30000
  # type: NodePort

---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: books-deployment
  labels:
    app: books
spec:
  selector:
    matchLabels:
      app: books
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
      - name: books
        image: web
        imagePullPolicy: Never
        # image: ioannispapakonstantinou/microwebapp_books
        ports:
        - containerPort: 3002
      #   env:
      #   - name: WEB_DB_HOST
      #     value: mongo-service
      #   - name: WEB_DB_PASSWORD
      #     valueFrom:
      #       secretKeyRef:
      #         name: mongo-pass
      #         key: password
      #     name: books
      #   volumeMounts:
      #   - name: books-persistent-storage
      #     mountPath: /var/www/html
      # volumes:
      # - name: books-persistent-storage
      #   persistentVolumeClaim:
      #     claimName: books-pv-claim



# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: books-service
# spec:
#   selector:
#     app: books
#   ports:
#     - protocol: TCP
#       port: 3000
#       targetPort: 3000
#       # targetPort: 3000
#       nodePort: 30002
#   type: NodePort
#
# ---
# apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
# kind: Deployment
# metadata:
#   name: books-deployment
#   labels:
#     app: books
# spec:
#   selector:
#     matchLabels:
#       app: books
#   replicas: 3 # tells deployment to run 2 pods matching the template
#   template:
#     metadata:
#       labels:
#         app: books
#     spec:
#       containers:
#       - name: books
#         image: ioannispapakonstantinou/microwebapp_books
#         env:
#         - name: WEB_DB_HOST
#           value: mongo-service
#         - name: WEB_DB_PASSWORD
#           valueFrom:
#             secretKeyRef:
#               name: mongo-pass
#               key: password
#         ports:
#         - containerPort: 3000
#           name: books
#         volumeMounts:
#         - name: books-persistent-storage
#           mountPath: /var/www/html
#       volumes:
#       - name: books-persistent-storage
#         persistentVolumeClaim:
#           claimName: books-pv-claim
#
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: books-pv-claim
#   labels:
#     app: books-claim
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 20Gi
