deployments/mongo-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  # namespace: pois
  name: pois-mongo-cluster-ip-service
spec:
  ports:
      # service port in cluster
    - port: 27017
      # port to contact inside container
      targetPort: 27017
  selector:
    app: pois-mongo
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pois-mongo-deployment
  # namespace: pois
spec:
  selector:
    matchLabels:
      app: pois-mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pois-mongo
    spec:
      containers:
        # by default, the image is pulled from docker hub
        - image: mongo
          name: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: pois-mongo-pv-claim
