deployments/web-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 3000
      # targetPort: 3000
  #     nodePort: 30013
  # type: NodePort

---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ioannispapakonstantinou/microwebapp_web
        ports:
        - containerPort: 3000
